<resources>
    <string name="app_name">Shopping_App_Advanced_Java_Prj2</string>
    <string name="textview">TextView</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="checkout">Checkout</string>
    <string name="budget">Budget :</string>
    <string name="Shopping_list">Shopping List</string>
    <string name="add_item">Add Item</string>
    <string name="items">Items :</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="shopped_items">**********Shopped Items**********</string>
    <string name="not_shopped_items">********Not Shopped Items********</string>
    <string name="Budget">Budget</string>
    <string name="total_price">Total Price</string>
    <string name="current_balance">Current Balance</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="exit">Exit</string>
    <string name="priceLabel">price :</string>
    <string name="priceOutput">---$</string>
    <string name="qanutity">Qanutity</string>
    <string name="priority">Priority</string>
</resources>
